[gd_scene load_steps=9 format=3 uid="uid://cyfwty2q3rdse"]

[ext_resource type="Script" path="res://Main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://rkdnhqgf2hpj" path="res://Hoop.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://4vwrqjegqwpj" path="res://Dolphin.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://ccqoreueuxdb7" path="res://HUD.tscn" id="4"]
[ext_resource type="AudioStream" uid="uid://q2pf4fr8d0ks" path="res://art/House In a Forest Loop.ogg" id="5"]
[ext_resource type="AudioStream" uid="uid://dw26fpygeag8o" path="res://art/gameover.wav" id="6"]
[ext_resource type="PackedScene" uid="uid://bpcm67gm8sok3" path="res://Water.tscn" id="7_bbi0j"]
[ext_resource type="Script" path="res://Water.gd" id="8_ofdqp"]

[sub_resource type="Curve2D" id="1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1215.5, 83.0487, 0, 0, 0, 0, 1449.57, 214.825, 0, 0, 0, 0, 9.4469, 260.586, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1")
mob_scene = ExtResource("2")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.509804, 0.509804, 0.509804, 1)

[node name="Player" parent="." instance=ExtResource("3")]

[node name="HoopTimer" type="Timer" parent="."]
wait_time = 0.755

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
scale = Vector2(0.952694, 2.36006)
curve = SubResource("1")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
rotation = 0.0682186
scale = Vector2(2.44, 1)

[node name="HUD" parent="." instance=ExtResource("4")]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6")

[node name="Water" parent="." instance=ExtResource("7_bbi0j")]
script = ExtResource("8_ofdqp")

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="HoopTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
